[tool.poetry]
name = "anycaptcha"
version = "1.2.1"
description = "All captcha solving services in one lib"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/anycaptcha"
packages = [{include = "anycaptcha"}]

[tool.poetry.dependencies]
python = "^3.11"
better-proxy = ">=1.1"
pydantic = ">=1"
httpx = ">=0.22"

[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
