[tool.poetry]
name = "anycaptcha"
version = "2.0.0"
description = "All captcha solving services in one lib"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/anycaptcha"
packages = [{include = "anycaptcha"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["socks"], version = "^0.27"}
better-proxy = ">=1.1"
pydantic = ">=1"

[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
